[package]
name = "ia_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.21.1"
rust_xlsxwriter = "0.41.0"
dotenv = "0.15.0"
anyhow = "1.0"
